--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,18 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+
     "require": {
         "php": "^7.1.3",
         "ext-intl": "*",
         "barryvdh/laravel-debugbar": "^3.2",
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.4",
+        "guzzlehttp/guzzle": "6.3.3",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
+        "symfony/psr-http-message-bridge": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -27,10 +31,12 @@
         ],
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "database/migrations"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Acme\\controllers\\": "app/controllers"
         }
     },
     "autoload-dev": {
